Update Segmenting and Clustering Neighbourhoods in Toronto.ipynb

--- a/Segmenting and Clustering Neighbourhoods in Toronto.ipynb
+++ b/Segmenting and Clustering Neighbourhoods in Toronto.ipynb
@@ -1132,14 +1132,14 @@
      "output_type": "stream",
      "text": [
       "My credentails:\n",
-      "CLIENT_ID: SS2DCCVHW3ZMK3HYPBSS1TQU3MMTHTVPVZ2CLF0AZHTGECOK\n",
-      "CLIENT_SECRET:BMV3QEC3ZHW13S3BNKQVONLDVRXWTLYIP0BIEPJ51PVLTMOV\n"
+      "CLIENT_ID: ****\n",
+      "CLIENT_SECRET:****\n"
      ]
     }
    ],
    "source": [
-    "CLIENT_ID = 'SS2DCCVHW3ZMK3HYPBSS1TQU3MMTHTVPVZ2CLF0AZHTGECOK' # Foursquare ID\n",
-    "CLIENT_SECRET = 'BMV3QEC3ZHW13S3BNKQVONLDVRXWTLYIP0BIEPJ51PVLTMOV' # Foursquare Secret\n",
+    "CLIENT_ID = '****' # Foursquare ID\n",
+    "CLIENT_SECRET = '****' # Foursquare Secret\n",
     "VERSION = '20210209'\n",
     "LIMIT = 100 # A default Foursquare API limit value\n",
     "print('My credentails:')\n",
